--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,8 +39,21 @@ services:
     networks:
       - default
 
+  redis-timetracker:
+    container_name: redis-timetracker
+    image: redis:alpine
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6382:6379'
+    volumes:
+      - redis-data:/data
+    networks:
+      - default
+
 volumes:
   db-data:
+  redis-data:
 
 networks:
   default:
