--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ djangorestframework==3.12.4
 django-rest-auth==0.9.5
 django-allauth==0.44.0
 drf-spectacular==0.15.1
+channels==3.0.3
+channels-redis==3.2.0
